--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ insert_final_newline = true
 indent_style = space
 max_line_length = 100
 
-[*.{json,gradle}]
+[*.{json,gradle,xtend}]
 indent_size = 4
 
 [*.clj]
