--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,19 @@ allprojects {
                 exclude "fabric.mod.json"
             }
         }
+
+        processTestmodResources {
+            inputs.property "version", project.version
+
+            from(sourceSets.testmod.resources.srcDirs) {
+                include "fabric.mod.json"
+                expand "version": project.version
+            }
+
+            from(sourceSets.testmod.resources.srcDirs) {
+                exclude "fabric.mod.json"
+            }
+        }
     }
 
     task sourcesJar(type: Jar, dependsOn: classes) {
